add catalog attributes

--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -29,6 +29,16 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" data-toggle="pill" href="#attributes" role="tab">
+                                        Атрибуты
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="pill" href="#fields" role="tab">
+                                        Поля
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#other" role="tab">
                                         Дополнительно
                                     </a>
@@ -111,75 +121,6 @@
 
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                {% include 'cup/form.twig' with {
-                                                    'label': 'Название дополнительного поля 1',
-                                                    'type': 'text',
-                                                    'name': 'product[field_1]',
-                                                    'message': 'Индивидуальное поле продукта категории',
-                                                    'args': {
-                                                        'value': category.product.field_1 is not empty ? category.product.field_1 : '',
-                                                        'placeholder': 'Поле 1',
-                                                    }
-                                                } %}
-                                            </div>
-                                            <div class="col-md-4">
-                                                {% include 'cup/form.twig' with {
-                                                    'label': 'Название дополнительного поля 2',
-                                                    'type': 'text',
-                                                    'name': 'product[field_2]',
-                                                    'message': 'Индивидуальное поле продукта категории',
-                                                    'args': {
-                                                        'value': category.product.field_2 is not empty ? category.product.field_2 : '',
-                                                        'placeholder': 'Поле 2',
-                                                    }
-                                                } %}
-                                            </div>
-                                            <div class="col-md-4">
-                                                {% include 'cup/form.twig' with {
-                                                    'label': 'Название дополнительного поля 3',
-                                                    'type': 'text',
-                                                    'name': 'product[field_3]',
-                                                    'message': 'Индивидуальное поле продукта категории',
-                                                    'args': {
-                                                        'value': category.product.field_3 is not empty ? category.product.field_3 : '',
-                                                        'placeholder': 'Поле 3',
-                                                    }
-                                                } %}
-                                            </div>
-                                            <div class="col-md-4">
-                                                {% include 'cup/form.twig' with {
-                                                    'label': 'Название дополнительного поля 4',
-                                                    'type': 'text',
-                                                    'name': 'product[field_4]',
-                                                    'message': 'Индивидуальное поле продукта категории',
-                                                    'args': {
-                                                        'value': category.product.field_4 is not empty ? category.product.field_4 : '',
-                                                        'placeholder': 'Поле 4',
-                                                    }
-                                                } %}
-                                            </div>
-                                            <div class="col-md-4">
-                                                {% include 'cup/form.twig' with {
-                                                    'label': 'Название дополнительного поля 5',
-                                                    'type': 'text',
-                                                    'name': 'product[field_5]',
-                                                    'message': 'Индивидуальное поле продукта категории',
-                                                    'args': {
-                                                        'value': category.product.field_5 is not empty ? category.product.field_5 : '',
-                                                        'placeholder': 'Поле 5',
-                                                    }
-                                                } %}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <hr>
-
-                                <div class="row">
-                                    <div class="col-md-12">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Изображения',
                                             'type': 'file',
@@ -220,6 +161,133 @@
                                 </div>
                             </div>
 
+                            {# Tab: Атрибуты #}
+                            <div class="tab-pane fade" id="attributes" role="tabpanel">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Атрибуты',
+                                            'type': 'select',
+                                            'name': 'attributes[]',
+                                            'message': 'Укажите индивидуальные атрибуты для категории',
+                                            'args': {
+                                                'multiple': true,
+                                                'option': attributes.pluck('title', 'uuid').all(),
+                                                'selected': category.hasAttributes() ? category.getAttributes().pluck('uuid').all() : ''
+                                            }
+                                        } %}
+                                    </div>
+                                </div>
+                            </div>
+
+                            {# Tab: Поля #}
+                            <div class="tab-pane fade" id="fields" role="tabpanel">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        {% include 'cup/form.twig' with {
+                                            'label': fields.catalog_category_field_1 ?? 'Поле 1',
+                                            'type': 'text',
+                                            'name': 'field1',
+                                            'message': 'Индивидуальное поле',
+                                            'args': {
+                                                'value': category.field1,
+                                            }
+                                        } %}
+                                    </div>
+                                    <div class="col-md-4">
+                                        {% include 'cup/form.twig' with {
+                                            'label': fields.catalog_category_field_2 ?? 'Поле 2',
+                                            'type': 'text',
+                                            'name': 'field2',
+                                            'message': 'Индивидуальное поле',
+                                            'args': {
+                                                'value': category.field2,
+                                            }
+                                        } %}
+                                    </div>
+                                    <div class="col-md-4">
+                                        {% include 'cup/form.twig' with {
+                                            'label': fields.catalog_category_field_3 ?? 'Поле 3',
+                                            'type': 'text',
+                                            'name': 'field3',
+                                            'message': 'Индивидуальное поле',
+                                            'args': {
+                                                'value': category.field3,
+                                            }
+                                        } %}
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                {% include 'cup/form.twig' with {
+                                                    'label': 'Название поля 1',
+                                                    'type': 'text',
+                                                    'name': 'product[field_1]',
+                                                    'message': 'Индивидуальное поле продукта',
+                                                    'args': {
+                                                        'value': category.product.field_1 is not empty ? category.product.field_1 : '',
+                                                        'placeholder': 'Поле 1',
+                                                    }
+                                                } %}
+                                            </div>
+                                            <div class="col-md-4">
+                                                {% include 'cup/form.twig' with {
+                                                    'label': 'Название поля 2',
+                                                    'type': 'text',
+                                                    'name': 'product[field_2]',
+                                                    'message': 'Индивидуальное поле продукта',
+                                                    'args': {
+                                                        'value': category.product.field_2 is not empty ? category.product.field_2 : '',
+                                                        'placeholder': 'Поле 2',
+                                                    }
+                                                } %}
+                                            </div>
+                                            <div class="col-md-4">
+                                                {% include 'cup/form.twig' with {
+                                                    'label': 'Название поля 3',
+                                                    'type': 'text',
+                                                    'name': 'product[field_3]',
+                                                    'message': 'Индивидуальное поле продукта',
+                                                    'args': {
+                                                        'value': category.product.field_3 is not empty ? category.product.field_3 : '',
+                                                        'placeholder': 'Поле 3',
+                                                    }
+                                                } %}
+                                            </div>
+                                            <div class="col-md-4">
+                                                {% include 'cup/form.twig' with {
+                                                    'label': 'Название поля 4',
+                                                    'type': 'text',
+                                                    'name': 'product[field_4]',
+                                                    'message': 'Индивидуальное поле продукта',
+                                                    'args': {
+                                                        'value': category.product.field_4 is not empty ? category.product.field_4 : '',
+                                                        'placeholder': 'Поле 4',
+                                                    }
+                                                } %}
+                                            </div>
+                                            <div class="col-md-4">
+                                                {% include 'cup/form.twig' with {
+                                                    'label': 'Название поля 5',
+                                                    'type': 'text',
+                                                    'name': 'product[field_5]',
+                                                    'message': 'Индивидуальное поле продукта',
+                                                    'args': {
+                                                        'value': category.product.field_5 is not empty ? category.product.field_5 : '',
+                                                        'placeholder': 'Поле 5',
+                                                    }
+                                                } %}
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             {# Tab: Дополнительно #}
                             <div class="tab-pane fade" id="other" role="tabpanel">
                                 <div class="row">
@@ -256,44 +324,6 @@
                                             'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Системное поле. Если вы не знаете, зачем это поле - лучше его не трогать."></i>',
                                             'args': {
                                                 'value': category.external_id,
-                                            }
-                                        } %}
-                                    </div>
-                                </div>
-
-                                <hr>
-
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        {% include 'cup/form.twig' with {
-                                            'label': fields.catalog_category_field_1 ?? 'Поле 1',
-                                            'type': 'text',
-                                            'name': 'field1',
-                                            'message': 'Индивидуальное поле',
-                                            'args': {
-                                                'value': category.field1,
-                                            }
-                                        } %}
-                                    </div>
-                                    <div class="col-md-4">
-                                        {% include 'cup/form.twig' with {
-                                            'label': fields.catalog_category_field_2 ?? 'Поле 2',
-                                            'type': 'text',
-                                            'name': 'field2',
-                                            'message': 'Индивидуальное поле',
-                                            'args': {
-                                                'value': category.field2,
-                                            }
-                                        } %}
-                                    </div>
-                                    <div class="col-md-4">
-                                        {% include 'cup/form.twig' with {
-                                            'label': fields.catalog_category_field_3 ?? 'Поле 3',
-                                            'type': 'text',
-                                            'name': 'field3',
-                                            'message': 'Индивидуальное поле',
-                                            'args': {
-                                                'value': category.field3,
                                             }
                                         } %}
                                     </div>
