--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -105,6 +105,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="/cup/catalog/attribute">
+                            <span class="sub-item">Атрибуты</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="/cup/catalog/order">
                             <span class="sub-item">Заказы</span>
                         </a>
