--- a/src/Template/cup/catalog/attribute/index.twig
+++ b/src/Template/cup/catalog/attribute/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Заказы</h2>
+                <h2 class="text-white pb-2 fw-bold">Атрибуты</h2>
             </div>
         </div>
     </div>
@@ -16,10 +16,10 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
-                        <h4 class="card-title">Список заказов ({{ orders.count() }})</h4>
-                        <a href="/cup/catalog/order/add" class="btn btn-primary btn-round ml-auto">
+                        <h4 class="card-title">Список атрибутов ({{ attributes.count() }})</h4>
+                        <a href="/cup/catalog/attribute/add" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
-                            Добавить заказ
+                            Добавить атрибут
                         </a>
                     </div>
                 </div>
@@ -28,31 +28,14 @@
                         <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                                 <tr>
-                                    <th width="10%">№ Заказа</th>
-                                    <th>Клиент</th>
-                                    <th width="10%">Статус</th>
-                                    <th width="15%">Дата добавления</th>
+                                    <th>Наименование</th>
                                     <th width="10%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for item in orders %}
+                                {% for item in attributes %}
                                     <tr>
-                                        <td data-order="{{ item.external_id ? item.external_id : item.date.getTimestamp() }}">
-                                            <a href="/cart/done/{{ item.uuid }}" target="_blank">
-                                                {% if item.external_id %}
-                                                    {{ item.external_id }} ({{ item.serial }})
-                                                {% else %}
-                                                    {{ item.serial }}
-                                                {% endif %}
-                                                <i class="fas fa-external-link-alt"></i>
-                                            </a>
-                                        </td>
-                                        <td>{{ item.user and item.user.getName() ? item.user.getName() : item.delivery.client }}</td>
-                                        <td>
-                                            <span class="badge badge-secondary">{{ item.status }}</span>
-                                        </td>
-                                        <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i') }}</td>
+                                        <td>{{ item.title }}</td>
                                         <td class="text-center">
                                             <div class="btn-group">
                                                 <div class="btn-group dropdown">
@@ -61,13 +44,13 @@
                                                     </button>
                                                     <ul class="dropdown-menu" role="menu">
                                                         <li>
-                                                            <a href="/cup/catalog/order/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i>Изменить</a>
+                                                            <a href="/cup/catalog/attribute/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i>Изменить</a>
                                                         </li>
                                                         <li>
                                                             <div class="dropdown-divider"></div>
                                                         </li>
                                                         <li>
-                                                            <form action="/cup/catalog/order/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить заказ?');">
+                                                            <form action="/cup/catalog/attribute/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить аттрибут?');">
                                                                 <button type="submit" class="btn btn-link text-danger">
                                                                     <i class="fas fa-fw fa-trash-alt"></i> Удалить
                                                                 </button>
