--- a/src/Template/cup/catalog/attribute/form.twig
+++ b/src/Template/cup/catalog/attribute/form.twig
@@ -38,6 +38,7 @@
                                     'label': 'Адрес',
                                     'type': 'text',
                                     'name': 'address',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Название атрибута. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов"></i>',
                                     'args': {
                                         'value': attribute.address
                                     }
