--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -73,7 +73,7 @@
         <script src="/assets/js/plugin/sweetalert/sweetalert2.all.min.js"></script>
 
         {% include 'mixin/img-script.twig' %}
-        {% include 'mixin/adbd.twig' %}
+        {#{% include 'mixin/adbd.twig' %}#}
         {% include 'mixin/catalog.twig' %}
         {% include 'mixin/recaptcha.twig' %}
     </body>
